# AlfredLibraryInHaskell

./: Alfred.cabal  Alfred.hs  LICENSE  README.md  _Alfred.hsplay  cases  cases.hs  test.hs
